# nalu_board_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  requirements.txt
include/: ip_address_info.h  nalu_board_configurator.h  nalu_board_controller.h  nalu_board_controller_logger.h  nalu_board_controller_params.h  nalu_board_manager.h  nalu_board_params.h  nalu_board_python_wrapper.h  nalu_board_state.h  nalu_capture_params.h
scripts/: screen.sh  stop_screen.sh
src/: ip_address_info.cpp  nalu_board_configurator.cpp  nalu_board_controller.cpp  nalu_board_controller_logger.cpp  nalu_board_manager.cpp  nalu_board_python_wrapper.cpp  nalu_board_state.cpp
